add client api
