# internal/controller/oauth2/authorize.go
@@ -34,7 +34,7 @@ func AuthorizePage(ctx *gin.Context) {
 		client     *model.OAuth2Client
 		clientInfo *model.OAuth2ClientInfo
 	)
-	client, err = service.OAuth2.GetClientFromCache(convert.ToUint64(clientID))
+	client, err = service.OAuth2.GetClient(convert.ToUint64(clientID))
 	if err != nil {
 		err = SetErrorMessage(ctx, err.Error())
 		if err != nil {
@@ -61,7 +61,7 @@ func AuthorizePage(ctx *gin.Context) {
 		ctx.Redirect(http.StatusFound, ctx.Request.RequestURI)
 		return
 	}
-	clientInfo, err = service.OAuth2.GetClientInfoFromCache(convert.ToUint64(clientID))
+	clientInfo, err = service.OAuth2.GetClientInfo(convert.ToUint64(clientID))
 	if err != nil {
 		ctx.HTML(http.StatusOK, "authorize.tmpl", gin.H{
 			"error": err.Error(),
