# internal/controller/oauth2/login.go
@@ -27,7 +27,7 @@ func LoginPage(ctx *gin.Context) {
 		clientInfo *model.OAuth2ClientInfo
 	)
 	clientID := ctx.Query("client_id")
-	clientInfo, err = service.OAuth2.GetClientInfoFromCache(convert.ToUint64(clientID))
+	clientInfo, err = service.OAuth2.GetClientInfo(convert.ToUint64(clientID))
 	if err != nil {
 		ctx.HTML(http.StatusOK, "login.tmpl", gin.H{
 			"error": err.Error(),
